add style sheet and external font

--- a/b5greends.libraries.yml
+++ b/b5greends.libraries.yml
@@ -2,3 +2,5 @@ global-styling:
   css:
     theme:
       css/style.css: {}
+      css/b5greends.css: {}
+      "https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap": {type: external}
